# Red-Teaming-AiFChem-Agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
aifchem_shim_eval/: __init__.py  client.py  inspect_helpers.py  run_chembench.py  run_redteam_multiturn.py  run_sosbench.py
docs/: aifchem-agent-protocol.md
examples/: litellm.config.yaml  openai-target.example.json  python_chat_client.py  scenarios.safe.json  shim.config.example.json
python_tests/: test_client.py
src/: cli.ts  shared.ts
src/aifchem/: mapping.ts  types.ts
src/redteam/: openaiAdapter.ts  runner.ts  types.ts
src/shim/: openai.ts  parser.ts  server.ts
test/: openai-runner.e2e.test.ts  shim.e2e.test.ts
